ingress/orders.yml
apiVersion: v1
kind: Namespace
metadata:
  name: orders
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: gcr.io/qwiklabs-gcp-03-68357c2ac320/orders:v1
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: ingress
spec:
  type: ExternalName
  externalName: orders-service.orders.svc.cluster.local
  ports:
  - port: 80
#apiVersion: v1
#kind: Service
#metadata:
  #name: orders-service
  #namespace: orders
#spec:
  #selector:
    #app: orders
  #ports:
  #- port: 80
    #targetPort: 8081
  #type: ClusterIP
